| Summary: | ASTERISK-18218: 10beta1 ooh323 outbound call doesn't work | ||
| Reporter: | Dmitry Melekhov (slesru) | Labels: | |
| Date Opened: | 2011-08-02 01:55:11 | Date Closed: | 2011-08-23 23:45:23 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Addons/chan_ooh323 |
| Versions: | 10.0.0-beta1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Centos 5.6/x64 | Attachments: | ( 0) ASTERISK-18218.patch |
| Description: | Here is dialplan exten =>4406,1,Dial(OOH323/5308) gnugk says following: ARJ|192.168.46.74:1720|0.0.20.188:0|ast-ngdu2:h323_ID=4404:dialedDigits|false|calledPartyNotRegistered|6f-6f-68-33-32-33-63-2d-bb-3e-65-ff-9e-2e-00-2e; And only info with trace level 6 in log is: 10:37:42:120 Parsing destination 5308 Let's compare this with 1.8.5.0: 10:43:30:016 Parsing destination 5308 10:43:30:016 Destination is parsed as dialed digits 5308 ... 10:43:30:019 destinationInfo = { 10:43:30:019 elem[0] = { 10:43:30:019 dialedDigits = { 10:43:30:019 "5308" 10:43:30:019 } 10:43:30:019 } 10:43:30:020 } | ||
| Comments: | By: Alexander Anikin (may213) 2011-08-06 08:49:37.984-0500 Looks like to asterisk ooh323 peer isn't registered on gnugk by some reason. > ARJ|192.168.46.74:1720|0.0.20.188:0|ast- ngdu2:h323_ID=4404:dialedDigits|false|calledPartyNotRegistered|6f-6f-68-33-32-33-63-2d-bb-3e-65-ff-9e-2e-00-2e; There is no required info for understanding what is trouble here. Could you provide more detailed ooh323 log with tracelevel=6 and started from loading point of chan_ooh323? First few packets must be grq/rrq and responses from gk about peer registration. There was small changes in gk client codes since 1.8.5 so trouble can be here but some tests was good and we need additional info for solving. Also i did another small changes in gk client codes two days before, you can try actual asterisk-10 branch from svn. By: Alexander Anikin (may213) 2011-08-07 17:09:56.256-0500 Dmitry, pls try attached patch. first trouble was in the destination parsing routine that use ast_parse_args with PARSE_ADDR, looks like to ast_parse_args from the current version parse numeric args as ip addrs. Additional checking added here before ast_parse_args call. second trouble could be in the gk client code that didn't set IP proto version properly, this just fixed. By: Dmitry Melekhov (slesru) 2011-08-08 02:05:17.149-0500 Hello! Thank you very much! Patch solved problem :-) | ||