Setup IP proto version for call in GK mode Added additional check for IP semantics before parse destination by ast_parse_args due to it can parse numeric as IP.

(closes issue ASTERISK-18218)
 Reported by: slesru
 Patch: ASTERISK-18218.patch



git-svn-id: https://origsvn.digium.com/svn/asterisk/branches/10@331200 65c4cc65-6c06-0410-ace0-fbb531ad65f3